story #9585: fix z-index so modals, select2 & datepickers aren't under the sidebar anymore

--- a/src/www/themes/common/tlp/src/scss/components/_dropdowns.scss
+++ b/src/www/themes/common/tlp/src/scss/components/_dropdowns.scss
@@ -25,6 +25,12 @@ $tlp-dropdown-animation: 100ms ease-in-out showDropdown;
 $flatpickr-day-hover: #f3f3f3;
 $flatpickr-day-dimmed: #d0d0d0;
 
+// scss-lint:disable QualifyingElement
+div.flatpickr-wrapper.inline div.flatpickr-calendar,
+div.flatpickr-wrapper.open div.flatpickr-calendar {
+    z-index: 100051;
+}
+
 // scss-lint:disable PseudoElement
 // scss-lint:disable QualifyingElement
 // scss-lint:disable SelectorFormat
